2014-10-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gpasm/processor.c,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    More precise warning message. Enabled the 'a' flag in other
    instructions also. (In the PIC16E family.)

2014-09-27  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure, doc/gputils.lyx:
    The version changed to 1.4.0 .

2014-09-26  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/evaluate.c: Bugfix to the HIGH operator.

  * gpasm/testsuite/gpasm.project/asmfiles/op14_high.asm,
    gpasm/testsuite/gpasm.project/asmfiles/op14e_high.asm,
    gpasm/testsuite/gpasm.project/hexfiles/op14_high.hex,
    gpasm/testsuite/gpasm.project/hexfiles/op14e_high.hex,
    gpasm/testsuite/gpasm.project/listfiles/op14_high.lst,
    gpasm/testsuite/gpasm.project/listfiles/op14e_high.lst:
    Testfiles to this bugfix.

2014-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, libgputils/gpprocessor.c,
    libgputils/gpcfg-table.c, libgputils/gpreg-table.c,
    header/Makefile.am, header/Makefile.in, header/*.inc,
    lkr/Makefile.am, lkr/Makefile.in, lkr/*.lkr:
    Updated based on the mplabx-2.20.

2014-09-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c,
    A new option: -t, --sdcc-dev14-list
    This help to the extension of the pic14devices.txt file
    in the sdcc project.

  * gpasm/ppparse.y:
    Changed text format.

  * gpasm/ppscan.l:
    Removed a unnecessary definition.

  * libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    New element in the struct proc_class.

  * config.guess, config.sub, configure: regenerated

2014-09-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/Makefile.am, doc/Makefile.in, doc/gpdasm_sample.ulist,
    doc/gputils.lyx, gpasm/directive.c, gpasm/evaluate.c,
    gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/gperror.c,